<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">AR Patient</string>
    <string name="msg_no_internet" translatable="false">It seems there is a low internet connectivity or no internet available, please check your internet connection and try again later.</string>
    <string name="str_permission_deny"><![CDATA[You have denied some permissons. Allow all permission at [setting] > [permissions], Go to settings]]></string>
    <string name="forgot_password">Forgot Password</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sign_in">sign in</string>
    <string name="need_an_account">Need an Account?</string>
    <string name="full_name">Full Name</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="on_signing_up_with_ar_patient">On signing up with AR Patient</string>
    <string name="i_agree_to_terms_amp_condition">I agree to <b><u>Terms &amp; Condition</u></b></string>
    <string name="register">register</string>

    <string name="email_blank_alert">Please enter email.</string>
    <string name="email_alert">Please enter valid email.</string>
    <string name="phone_alert">Please enter phone.</string>
    <string name="phone_alert_lenght">Please enter valid phone.</string>
    <string name="password_blank_alert">Please enter Password</string>
    <string name="confirm_password_blank_alert">Please enter Confirm Password</string>
    <string name="password_alert">Password should have minimum 8 characters.</string>
    <string name="con_password_alert">Password and Confirm Password must be same.</string>
    <string name="name_alert">Please enter Name.</string>
    <string name="msg_alert">Please enter Message.</string>

    <string name="fullname_blank_alert">Please enter your name.</string>
    <string name="image_blank">Please Select profile image.</string>
    <string name="dummy_text">In publishing and graphic design, Lorem ipsum is a placeholder text commonly used to demonstrate the visual form of a document or a typeface without relying on meaningful content. Lorem ipsum may be used as a placeholder before final copy is available.</string>
    <string name="submit">Submit</string>
    <string name="otp">Enter OTP</string>
    <string name="reset_password">Reset Password</string>
    <string name="otp_alert">Please enter valid OTP </string>
    <string name="search_by_name">Search by name</string>
    <string name="back_click">Please click BACK again to exit</string>
    <string name="my_profile">My Profile</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="settings">Settings</string>
    <string name="f_a_q">F.A.Q.</string>
    <string name="about_us">About Us</string>
    <string name="terms_amp_conditions"><![CDATA[Terms & Conditions]]></string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="news_feed">News Feed</string>
    <string name="change_password">Change Password</string>
    <string name="del_account">Delete Account</string>
    <string name="logout">Logout</string>
    <string name="faq_title">F.A.Q</string>
    <string name="we_re_here_to_help" tools:ignore="StringEscaping">Were Here to Help!</string>
    <string name="contact_us">Contact Us</string>
    <string name="contact_us_msg">Have an issue or Want to tell Something us\nhow great were doing? Contact us via email\nbelow!</string>
    <string name="name">Name</string>
    <string name="str_phone">Phone</string>
    <string name="str_msg">Message</string>
    <string name="update">Update</string>
    <string name="test_results">Test Results</string>
    <string name="your_diagnosis">YOUR DIAGNOSIS</string>
    <string name="str_what_you_did">what you did well</string>
    <string name="new_password">New password</string>

    <string name="permission_required">Please grant the permission to use the microphone</string>
    <string name="sucess_contact_us">Thank you for contacting us. We will connect with you soon for your raised concern.</string>
    <string name="registration_sucess_msg">Thank you for registering with us.</string>
    <string name="profile_update_sucess_msg">Profile has been updated successfully.</string>
    <string name="patient_exam">Patient Exam</string>
    <string name="exam_help">Exam Help</string>
    <string name="exam_help_string">Here are some things you might ask me.</string>
    <string name="please_share_you_diagnosis_here">Please share you diagnosis here.</string>
    <string name="soap_notes">Soap Notes</string>
    <string name="diagnosis">Diagnosis</string>
    <string name="str_done">Done</string>
    <string name="soap_notes1">SOAP Notes</string>
    <string name="body_parts">Body Parts</string>
    <string name="plan_notes">PLAN NOTES</string>
    <string name="assessment_notes">ASSESSMENT NOTES</string>
    <string name="objective_notes">OBJECTIVE NOTES</string>
    <string name="subjective_notes">SUBJECTIVE NOTES</string>
    <string name="soap_note_written_by_learner">SOAP Note Written By Learner</string>
    <string name="areas_of_the_body_that_should_have_been_assessed_but_were_not">Areas of the Body That Should Have Been Assessed but Were Not</string>
    <string name="areas_of_the_body_assessed">Areas of the Body Assessed</string>
    <string name="physical_exam">Physical Exam</string>
    <string name="questions_not_asked_that_should_have_been">Questions Not Asked That Should Have Been</string>
    <string name="questions_asked_by_learner">Questions Asked By Learner</string>
    <string name="patient_interview_questions">Patient Interview questions</string>
    <string name="soap_note_written_by_me">SOAP Note Written By Me</string>
    <string name="no_data_available">No data available</string>
    <string name="can_you_ask_diff_question">Can you ask a different question?</string>
    <string name="plans">Plans</string>
    <string name="per_month">Per Month</string>
    <string name="manage_properties">Manage Properties</string>
    <string name="manage_subscription">Manage Subscription</string>

    <!--In-app purchase stirngs-->
    <string name="downgrade_message">You can not purchase Silver Plan since you have already purchased Gold Plan. To downgrade, please wait until the expiration date and the cancel the Gold Plan and then go for Silver Plan.</string>
    <string name="user_already_purchased_plan">You have already purchased this plan</string>
    <string name="another_user_already_purchased_plan">This plan has already been purchased by someone else.</string>
    <string name="renwal_date">Renewal Date:</string>
    <string name="subscription_other_platform_monthly">You can not upgrade package from this device since you have purchased monthly package from the iOS device.</string>
</resources>