<?xml version="1.0" encoding="utf-8"?>
<layout>

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/allscreen_bg"
        tools:context=".activity.LoginActivity">

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_height="@dimen/_300sdp"
                    android:layout_width="match_parent"
                    android:layout_marginTop="@dimen/_20sdp"
                    android:gravity="center">

                    <androidx.appcompat.widget.AppCompatImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:adjustViewBounds="true"
                        android:scaleType="centerCrop"
                        android:src="@drawable/logo" />
                </LinearLayout>

                <LinearLayout
                    android:layout_above="@+id/linForgotPassword"
                    android:layout_marginTop="@dimen/_20sdp"
                    android:layout_marginBottom="@dimen/_20sdp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/_20sdp"
                        android:layout_marginRight="@dimen/_20sdp"
                        android:orientation="vertical">

                        <com.ar.patient.uc.SlcEditTextView
                            android:id="@+id/EdtEmail"
                            android:layout_width="match_parent"
                            android:layout_height="@dimen/_40sdp"
                            android:background="@drawable/gradient_buttion_rounded_circle"
                            android:drawableLeft="@drawable/user"
                            android:drawablePadding="@dimen/_8sdp"
                            android:hint="@string/email"
                            android:imeOptions="actionNext"
                            android:inputType="textEmailAddress"
                            android:singleLine="true"
                            android:paddingStart="@dimen/_10sdp"
                            android:paddingEnd="@dimen/_10sdp"
                            android:tag="100"
                            android:textColor="@color/white"
                            android:textColorHint="@color/white"
                            android:textSize="@dimen/_10sdp" />

                        <com.ar.patient.uc.SlcEditTextView
                            android:id="@+id/EdtPassword"
                            android:layout_width="match_parent"
                            android:layout_height="@dimen/_40sdp"
                            android:layout_marginTop="@dimen/_8sdp"
                            android:background="@drawable/gradient_buttion_rounded_circle"
                            android:drawableLeft="@drawable/pass"
                            android:drawableRight="@drawable/ic_visibility_off_white"
                            android:drawablePadding="@dimen/_8sdp"
                            android:hint="@string/password"
                            android:imeOptions="actionDone"
                            android:inputType="textPassword"
                            android:singleLine="true"
                            android:paddingStart="@dimen/_10sdp"
                            android:paddingEnd="@dimen/_10sdp"
                            android:tag="100"
                            android:textColor="@color/white"
                            android:textColorHint="@color/white"
                            android:textSize="@dimen/_10sdp" />


                        <com.ar.patient.uc.SlcButtonView
                            android:id="@+id/btnLogin"
                            android:layout_width="match_parent"
                            android:layout_height="@dimen/_40sdp"
                            android:layout_marginTop="@dimen/_15sdp"
                            android:background="@drawable/gradient_buttion"
                            android:tag="400"
                            android:text="@string/sign_in"
                            android:textAllCaps="true"
                            android:textColor="@color/white"
                            android:textSize="@dimen/_13sdp" />


                        <com.ar.patient.uc.SlcTextView
                            android:id="@+id/tvNeedAccount"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_marginTop="@dimen/_15sdp"
                            android:gravity="center_vertical"
                            android:tag="200"
                            android:text="@string/need_an_account"
                            android:textColor="@color/white"
                            android:textSize="@dimen/_13sdp" />


                    </LinearLayout>


                </LinearLayout>

                <LinearLayout
                    android:layout_height="@dimen/_40sdp"
                    android:id="@+id/linForgotPassword"
                    android:layout_width="match_parent"
                    android:layout_alignParentBottom="true"
                    android:background="@color/forgot_passwprd_text_bg_color"
                    android:gravity="center">

                    <com.ar.patient.uc.SlcTextView
                        android:id="@+id/tvforgotPassword"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical"
                        android:tag="200"
                        android:text="@string/forgot_password"
                        android:textAllCaps="false"
                        android:textColor="@color/white"
                        android:textSize="@dimen/_11sdp" />


                </LinearLayout>

            </RelativeLayout>

        </androidx.core.widget.NestedScrollView>

    </RelativeLayout>
</layout>